# arcpy-to-foss

./: README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pipeline.yml
arcpy2foss/: cli.py  extent.py  gpx.py  nearest.py  sjoin.py  utils.py
tests/: conftest.py  test_cli.py  test_extent.py  test_gpx.py  test_nearest.py  test_sjoin.py  test_utils.py
tests/resources/: points_as_track_epsg32630.gpkg  points_epsg32630.gpkg  sjoin_left.geojson  sjoin_right.geojson  vector_epsg32632.gpkg
