[aliases]
release = sdist bdist_wheel
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = arcpy2foss
url = https://github.com/mblackgeo/arcpy-to-foss
description = A conversion of ArcPy scripts to FOSS
long_description = file: README.md
long_description_content_type = text/markdown
author = Martin Black
author_email = mblack@sparkgeo.com
zip_safe = False

[options]
use_scm_version = True
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    fiona~=1.8.20
    geopandas~=0.10.2
    rasterio~=1.2.10
    shapely~=1.8.0
tests_require =
    pytest
    pytest-cov

[flake8]
max-line-length = 120
max-complexity = 10